<resources>
    <string name="app_name">warrior</string>
    <string name="day_to_go">%1$d day to go</string>
    <string name="days_to_go">%1$d days to go</string>
    <string name="search">Search</string>
    <string name="search_hint">Start typing...</string>


    <string name="company">SANSHINKAN</string>
    <string name="description">Discover the warrior in you</string>
    <string name="terms">By continuing, you agree to our terms and conditions</string>
    <string name="signingup_wait">Signing up, please wait...</string>
    <string name="logging_out">Logging out, please wait...</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="no_internet_message">No internet connection</string>
    <string name="login_with_google">Login with Google</string>
    <string name="update_play_services">Please update Play Services</string>
    <string name="no_results_found">No results</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <string name="from_date">From: %1$s</string>
    <string name="on_date">On: %1$s</string>
    <string name="to_date">To: %1$s</string>

    <string name="attendance_title">Mark your attendance</string>
    <string name="attendance_description">Open sanshinkan.org/attendance in iPad and just enter the below code to mark your attendance</string>
    <string name="generate_again">Generate code again</string>
</resources>
