<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <sanshinkan.org.warrior.utils.views.TextViewMedium
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size16"
            android:textColor="@color/black_trans_fifty"
            android:gravity="center_horizontal"
            android:padding="@dimen/size10"
            android:text="@string/attendance_title"/>

        <sanshinkan.org.warrior.utils.views.TextViewRegular
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size12"
            android:textColor="@color/black_trans_fifty"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/size10"
            android:paddingRight="@dimen/size10"
            android:text="@string/attendance_description"/>

        <sanshinkan.org.warrior.utils.views.TextViewMedium
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="@dimen/size48"
            android:gravity="center"
            android:textColor="@color/black_trans_fifty"
            android:text="12345"/>

        <sanshinkan.org.warrior.utils.views.TextViewRegular
            android:id="@+id/generate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size12"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/size10"
            android:background="@drawable/bluebuttonfeedback"
            android:padding="@dimen/size10"
            android:textAllCaps="true"
            android:text="@string/generate_again"/>

    </LinearLayout>

</android.support.v4.widget.SwipeRefreshLayout>